Platform 1.28

* Configuration

  Configuration objects are no longer treated as singletons, in order
  to avoid action at a distance.

* HttpServer

  We created new configuration defaults:

  http-server.https.keystore.path=etc/keystore.jks
  http-server.https.keystore.key=keystore

* Maven config

  We added a "ci" Maven profile that builds Javadoc.

* Library Upgrades

  - Jetty to 9.2.13
  - Jersey to 2.22
  - slf4j to 1.7.12
  - joda-time to 2.9 (Fixes a compatibility issue with Java 8u60.)
  - testng to 6.9.6
  - Jacoco to 0.7.5

Platform 1.27

* TestingResponse

  We created a new builder for TestingResponse and deprecated most of
  the previous methods of creating TestingResponse. For example:

      TestingResponse.mockResponse()
          .header("X-Foo", "bar")
          .jsonBody(object)
          .build();

* Skeleton server and Sample server

  The Maven archetypes now supply a gitignore file. This file should be
  renamed to ".gitignore" (it is impractical to get an archetype to create
  a file named ".gitignore").

  We have updated the skeleton and sample servers to reflect current practice.

  - The skeleton server Main class includes code to override the default value
    of http-server.http.port.
  - TestServer initializes and tears down the HttpClient once for the class.
  - Resource classes are tested only through TestServer.
  - TestServer no longer uses resource files to supply JSON.
  - The sample server no longer uses events

* Admin port

  We added an /admin/configuration resource to the admin port which permits
  retrieving the redacted configuration settings.

* HttpServer

  We created TestingAdminHttpServer and TestingAdminHttpServerModule for
  testing of admin port resources.

* Launcher

  We added the "-XX:HeapDumpPath=var" option to the set of default JVM options.

* [Bug] Fix connection hang when ResponseHandler throws without reading large
  response.

* Library Upgrades

  - AutoValue to 1.1

* Maven plugin upgrades